Left align related group logos within their fixed size container #2586

--- a/src/html-pages/search-results-page/_index.scss
+++ b/src/html-pages/search-results-page/_index.scss
@@ -39,7 +39,7 @@ $_common-space-beneath: 0.5rem;
 
   img {
     @include contain-image.contain-image();
-    object-position: 50% 50%;
+    object-position: 0% 50%;
   }
 }
 
